--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .menu {
   position: absolute;
   box-sizing: border-box;
-  width: 100%;
+  width: 98%;
   border: 1px solid #cccccc;
   height: 250px;
   overflow: scroll;
@@ -25,10 +25,68 @@
   color: #454545;
   font-weight: bold;
 }
+
+.auth {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 200px;
+  margin: 25px 0 0 30px;
+  border: 1px solid black;
+  border-radius: 8px;
+}
+
+.auth > span {
+  padding: 7px;
+}
+
+.auth > a {
+  margin-top: 10px;
+  padding: 0 0 7px 7px;
+}
+
+i {
+  padding-right: 10px;
+}
+
+.select-input {
+  margin: 20px 0 0 30px;
+  width: 300px;
+  display: flex;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.select-input > span {
+  padding: 6px;
+}
+
+.select-input > div {
+  width: 100%;
+  padding: 6px;
+}
+
+#states-autocomplete {
+  width: 100%;
+  border: none;
+}
+
+#states-autocomplete:focus {
+  outline: none;
+}
+
+.fa-caret-down {
+  position: absolute;
+  margin: -1px 0 0 273px;
+  font-size: 30px;
+  pointer-events: none;
+}
+
+
 table {
   border-spacing: 0;
   border-collapse: collapse;
-  margin: 75px auto 0 10px;
+  margin: 75px auto 0 30px;
   position: relative;
   z-index: 1;
 }
@@ -49,10 +107,10 @@ thead th {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #111111;
 }
 
 a:visited {
-  color: black;
+  color: #111111;
 }
 
